--- a/DCMotor/Makefile
+++ b/DCMotor/Makefile
@@ -1,6 +1,9 @@
 ARDMK_DIR=/usr
+AVR_TOOLS_DIR=/usr
+ARDUINO_LIBS=AFMotor
 ARDUINO_DIR=/usr/share/arduino
 BOARD=uno
 BOARD_TAG=uno
 ARDUINO_PORT=/dev/ttyACM0
+USER_LIB_PATH?=$(CURDIR)/../libraries
 include /usr/share/arduino/Arduino.mk
