DCMotor/Makefile: updated for arduino-mk-1.2.0-1

--- a/DCMotor/Makefile
+++ b/DCMotor/Makefile
@@ -1,4 +1,4 @@
-ARDMK_DIR=/usr
+ARDMK_DIR=/usr/share/arduino
 AVR_TOOLS_DIR=/usr
 ARDUINO_LIBS=AFMotor
 ARDUINO_DIR=/usr/share/arduino
@@ -6,4 +6,4 @@ BOARD=uno
 BOARD_TAG=uno
 ARDUINO_PORT=/dev/ttyACM0
 USER_LIB_PATH?=$(CURDIR)/../libraries
-include /usr/share/arduino/Arduino.mk
+include $(ARDMK_DIR)/Arduino.mk
